--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -39,7 +39,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="https://gss-cogs.github.io/family-homelessness/datasets/specmenu.html?">Homelessness</a>
-              <a class="dropdown-item" href="https://gss-cogs.github.io/family-covid-19/datasets/specmenu.html">Covid 19</a>
+              <a class="dropdown-item" href="https://gss-cogs.github.io/family-covid-19/datasets/specmenu.html?">Covid 19</a>
             </div>
           </li>
         </ul>
