--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -54,7 +54,7 @@
       <p><a href="specflowcharts.html?********/flowchart.ttl">Spare</a>.</p>
       </br>
       <p><b>GOV Dept</b></p>
-      <p><a href="specflowcharts.html?********/flowchart.ttl">Spare</b></p>
+      <p><a href="specflowcharts.html?********/flowchart.ttl">Spare</a>.</p>
       </br>
       <p><b>GOV Dept</b></p>
       <p><a href="specflowcharts.html?**********/flowchart.ttl">Spare</a>.</p>
