--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -48,19 +48,17 @@
     <div class="container-fluid">
       <h1>COGS Specifications</h1>
       <h2>Covid-19 Transformation</h2>
-      </br>
-      </br>
-      <p><b>GOV Dept</b></p>
-      <p><a href="specflowcharts.html?********/flowchart.ttl">Spare</a>.</p>
-      </br>
-      <p><b>GOV Dept</b></p>
-      <p><a href="specflowcharts.html?********/flowchart.ttl">Spare</a>.</p>
-      </br>
-      <p><b>GOV Dept</b></p>
-      <p><a href="specflowcharts.html?**********/flowchart.ttl">Spare</a>.</p>
-
-      </br>
-      <p><b>Welsh Government</b></p>
+    </br>
+      <p><b><a href="index.html">Development</a></b></p>
+    </br>
+      <p><b>Department for Education</b></p>
+    <ul>
+      <li><p>DfE Coronavirus COVID-19 Attendance in Education and early Years Settings:
+      <a href="specflowcharts.html?DfE-Coronavirus-COVID-19-attendance-in-education-and-early-years-settings/flowchart.ttl">Flowchart</a> -
+      <a href="DfE-Coronavirus-COVID-19-attendance-in-education-and-early-years-settings/spec.html">Spec</a>
+      </p></li>
+    </ul>
+    </br>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
