--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -47,7 +47,7 @@
     </nav>
     <div class="container-fluid">
       <h1>COGS Specifications</h1>
-      <h2>Covid-19 Transformation</h2>
+      <h2>Covid-19 Transformations</h2>
     </br>
       <p><b><a href="index.html">Development</a></b></p>
     </br>
