--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -51,7 +51,7 @@
     </br>
       <p><b><a href="index.html">Development</a></b></p>
     </br>
-      <p><b>Department for Education</b></p>
+    <p><b>Department for Education</b></p>
     <ul>
       <li><p>DfE Coronavirus COVID-19 Attendance in Education and early Years Settings:
       <a href="specflowcharts.html?DfE-Coronavirus-COVID-19-attendance-in-education-and-early-years-settings/flowchart.ttl">Flowchart</a> -
@@ -59,6 +59,13 @@
       </p></li>
     </ul>
     </br>
+    <p><b>Welsh Government</b></p>
+    <ul>
+      <li><p>Testing data for coronavirus (COVID-19):
+      <a href="specflowcharts.html?WG-Testing-data-for-coronavirus-COVID-19/flowchart.ttl">Flowchart</a> -
+      <a href="WG-Testing-data-for-coronavirus-COVID-19/spec.html">Spec</a>
+      </p></li>
+    </ul>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
