--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -61,7 +61,7 @@
     </br>
     <p><b>Welsh Government</b></p>
     <ul>
-      <li><p>Testing data for coronavirus (COVID-19):
+      <li><p>WG Testing data for coronavirus (COVID-19):
       <a href="specflowcharts.html?WG-Testing-data-for-coronavirus-COVID-19/flowchart.ttl">Flowchart</a> -
       <a href="WG-Testing-data-for-coronavirus-COVID-19/spec.html">Spec</a>
       </p></li>
