--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -55,7 +55,8 @@
     <ul>
       <li><p>DfE Coronavirus COVID-19 Attendance in Education and early Years Settings:
       <a href="specflowcharts.html?DfE-Coronavirus-COVID-19-attendance-in-education-and-early-years-settings/flowchart.ttl">Flowchart</a> -
-      <a href="DfE-Coronavirus-COVID-19-attendance-in-education-and-early-years-settings/spec.html">Spec</a>
+      <a href="DfE-Coronavirus-COVID-19-attendance-in-education-and-early-years-settings/spec.html">Spec</a> -
+      <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?DfE-Coronavirus-COVID-19-attendance-in-education-and-early-years-settings">Status</a>
       </p></li>
     </ul>
     </br>
@@ -63,7 +64,8 @@
     <ul>
       <li><p>WG Testing data for coronavirus (COVID-19):
       <a href="specflowcharts.html?WG-Testing-data-for-coronavirus-COVID-19/flowchart.ttl">Flowchart</a> -
-      <a href="WG-Testing-data-for-coronavirus-COVID-19/spec.html">Spec</a>
+      <a href="WG-Testing-data-for-coronavirus-COVID-19/spec.html">Spec</a> -
+      <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?WG-Testing-data-for-coronavirus-COVID-19">Status</a>
       </p></li>
     </ul>
   </br>
@@ -71,7 +73,8 @@
   <ul>
     <li><p>Universal Credit declarations (claims) and advances: management information:
     <a href="specflowcharts.html?DWP-Universal-Credit-declarations-claims-and-advances-management-information/flowchart.ttl">Flowchart</a> -
-    <a href="DWP-Universal-Credit-declarations-claims-and-advances-management-information/spec.html">Spec</a>
+    <a href="DWP-Universal-Credit-declarations-claims-and-advances-management-information/spec.html">Spec</a> -
+    <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?DWP-Universal-Credit-declarations-claims-and-advances-management-information">Status</a>
     </p></li>
   </ul>
     </div>
