--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -62,6 +62,11 @@
     </br>
     <p><b>Welsh Government</b></p>
     <ul>
+      <li><p>Summary data about coronavirus (COVID-19) and the response to it:
+      <a href="specflowcharts.html?WG-Summary-data-about-coronavirus-COVID-19-and-the-response-to-it/flowchart.ttl">Flowchart</a> -
+      <a href="WG-Summary-data-about-coronavirus-COVID-19-and-the-response-to-it/spec.html">Spec</a> -
+      <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?WG-Summary-data-about-coronavirus-COVID-19-and-the-response-to-it">Status</a>
+      </p></li>
       <li><p>WG Testing data for coronavirus (COVID-19):
       <a href="specflowcharts.html?WG-Testing-data-for-coronavirus-COVID-19/flowchart.ttl">Flowchart</a> -
       <a href="WG-Testing-data-for-coronavirus-COVID-19/spec.html">Spec</a> -
