--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -56,7 +56,7 @@
       <li><p>DfE Coronavirus COVID-19 Attendance in Education and early Years Settings:
       <a href="specflowcharts.html?DfE-Coronavirus-COVID-19-attendance-in-education-and-early-years-settings/flowchart.ttl">Flowchart</a> -
       <a href="DfE-Coronavirus-COVID-19-attendance-in-education-and-early-years-settings/spec.html">Spec</a> -
-      <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?DfE-Coronavirus-COVID-19-attendance-in-education-and-early-years-settings">Status</a>
+      <a href="index.html?DfE-Coronavirus-COVID-19-attendance-in-education-and-early-years-settings">Status</a>
       </p></li>
     </ul>
     </br>
@@ -65,12 +65,17 @@
       <li><p>Summary data about coronavirus (COVID-19) and the response to it:
       <a href="specflowcharts.html?WG-Summary-data-about-coronavirus-COVID-19-and-the-response-to-it/flowchart.ttl">Flowchart</a> -
       <a href="WG-Summary-data-about-coronavirus-COVID-19-and-the-response-to-it/spec.html">Spec</a> -
-      <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?WG-Summary-data-about-coronavirus-COVID-19-and-the-response-to-it">Status</a>
+      <a href="index.html?WG-Summary-data-about-coronavirus-COVID-19-and-the-response-to-it">Status</a>
+      </p></li>
+      <li><p>Survey of public views on the coronavirus (COVID-19):
+      <a href="specflowcharts.html?WG-Survey-of-public-views-on-the-coronavirus-COVID-19/flowchart.ttl">Flowchart</a> -
+      <a href="WG-Survey-of-public-views-on-the-coronavirus-COVID-19/spec.html">Spec</a> -
+      <a href="index.html?WG-Survey-of-public-views-on-the-coronavirus-COVID-19">Status</a>
       </p></li>
       <li><p>WG Testing data for coronavirus (COVID-19):
       <a href="specflowcharts.html?WG-Testing-data-for-coronavirus-COVID-19/flowchart.ttl">Flowchart</a> -
       <a href="WG-Testing-data-for-coronavirus-COVID-19/spec.html">Spec</a> -
-      <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?WG-Testing-data-for-coronavirus-COVID-19">Status</a>
+      <a href="index.html?WG-Testing-data-for-coronavirus-COVID-19">Status</a>
       </p></li>
     </ul>
   </br>
@@ -79,7 +84,7 @@
     <li><p>Universal Credit declarations (claims) and advances: management information:
     <a href="specflowcharts.html?DWP-Universal-Credit-declarations-claims-and-advances-management-information/flowchart.ttl">Flowchart</a> -
     <a href="DWP-Universal-Credit-declarations-claims-and-advances-management-information/spec.html">Spec</a> -
-    <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?DWP-Universal-Credit-declarations-claims-and-advances-management-information">Status</a>
+    <a href="index.html?DWP-Universal-Credit-declarations-claims-and-advances-management-information">Status</a>
     </p></li>
   </ul>
     </div>
