removing github link from boxes

--- a/datasets/specflowcharts.html
+++ b/datasets/specflowcharts.html
@@ -165,11 +165,11 @@
               html += c.value;
             }
             html += '</p>';
-            if (n.value.startsWith('https://github.com/')) {
-              html += '<a href="' + n.value + '"><i class="pull-right fa fa-github"></i></a>';
-            } else {
-              html += '<a href="' + n.value + '"><i class="pull-right fa fa-external-link"></i></a>';
-            }
+            //if (n.value.startsWith('https://github.com/')) {
+              //html += '<a href="' + n.value + '"><i class="pull-right fa fa-github"></i></a>';
+            //} else {
+              //html += '<a href="' + n.value + '"><i class="pull-right fa fa-external-link"></i></a>';
+            //}
             html += '</div></div>';
             g.setNode(n.value, {
               labelType: 'html',
