Adding links to specs

--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -88,6 +88,15 @@
     </p></li>
   </ul>
 </br>
+<p><b>Public Health England</b></p>
+<ul>
+  <li><p>Coronavirus (COVID-19) in the UK:
+  <a href="specflowcharts.html?PHE-Coronavirus-COVID-19-in-the-UK/flowchart.ttl">Flowchart</a> -
+  <a href="PHE-Coronavirus-COVID-19-in-the-UK/spec.html">Spec</a> -
+  <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?PHE-Coronavirus-COVID-19-in-the-UK">Status</a>
+  </p></li>
+</ul>
+</br>
 <p><b>Marine Management Organisation</b></p>
 <ul>
   <li><p>Ad hoc statistical release: UK Sea Fisheries Statistics:
