Adding tag priority to some transforms

--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -54,7 +54,7 @@
     </br>
     <p><b>Department for Education</b></p>
     <ul>
-      <li><p>DfE Coronavirus COVID-19 Attendance in Education and early Years Settings:
+      <li><p>DfE Coronavirus COVID-19 Attendance in Education and early Years Settings <b style="color:red">Priority</b>:
       <a href="specflowcharts.html?DfE-Coronavirus-COVID-19-attendance-in-education-and-early-years-settings/flowchart.ttl">Flowchart</a> -
       <a href="DfE-Coronavirus-COVID-19-attendance-in-education-and-early-years-settings/spec.html">Spec</a> -
       <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?DfE-Coronavirus-COVID-19-attendance-in-education-and-early-years-settings">Status</a>
@@ -73,7 +73,7 @@
       <a href="WG-Survey-of-public-views-on-the-coronavirus-COVID-19/spec.html">Spec</a> -
       <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?WG-Survey-of-public-views-on-the-coronavirus-COVID-19">Status</a>
       </p></li>
-      <li><p>WG Testing data for coronavirus (COVID-19):
+      <li><p>WG Testing data for coronavirus (COVID-19) <b style="color:red">Priority</b>:
       <a href="specflowcharts.html?WG-Testing-data-for-coronavirus-COVID-19/flowchart.ttl">Flowchart</a> -
       <a href="WG-Testing-data-for-coronavirus-COVID-19/spec.html">Spec</a> -
       <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?WG-Testing-data-for-coronavirus-COVID-19">Status</a>
@@ -82,7 +82,7 @@
   </br>
   <p><b>Department for Work and Pensions</b></p>
   <ul>
-    <li><p>Universal Credit declarations (claims) and advances: management information:
+    <li><p>Universal Credit declarations (claims) and advances: management information <b style="color:red">Priority</b>:
     <a href="specflowcharts.html?DWP-Universal-Credit-declarations-claims-and-advances-management-information/flowchart.ttl">Flowchart</a> -
     <a href="DWP-Universal-Credit-declarations-claims-and-advances-management-information/spec.html">Spec</a> -
     <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?DWP-Universal-Credit-declarations-claims-and-advances-management-information">Status</a>
