Adding tag priority to some transforms

--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -51,7 +51,16 @@
       <h2>Covid-19 Transformations</h2>
     </br>
       <p><b><a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html">Family Transform Status</a></b></p>
-    </br>
+  </br>
+  <p><b>National Health Service</b></p>
+  <ul>
+    <li><p>NHS-D Potential COVID-19 symptoms reported through NHS Pathways and 111 online :
+    <a href="specflowcharts.html?NHS-D-Potential-COVID-19-symptoms-reported-through-NHS-Pathways-and-111-online/flowchart.ttl">Flowchart</a> -
+    <a href="NHS-D-Potential-COVID-19-symptoms-reported-through-NHS-Pathways-and-111-online/spec.html">Spec</a> -
+    <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?NHS-D-Potential-COVID-19-symptoms-reported-through-NHS-Pathways-and-111-online">Status</a>
+    </p></li>
+  </ul>
+  </br>
     <p><b>Department for Education</b></p>
     <ul>
       <li><p>DfE Coronavirus COVID-19 Attendance in Education and early Years Settings <b style="color:red">Priority</b>:
