making some priority

--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -54,7 +54,7 @@
   </br>
   <p><b>National Health Service</b></p>
   <ul>
-    <li><p>NHS-D Potential COVID-19 symptoms reported through NHS Pathways and 111 online :
+    <li><p>NHS-D Potential COVID-19 symptoms reported through NHS Pathways and 111 online <b style="color:red">Priority</b>:
     <a href="specflowcharts.html?NHS-D-Potential-COVID-19-symptoms-reported-through-NHS-Pathways-and-111-online/flowchart.ttl">Flowchart</a> -
     <a href="NHS-D-Potential-COVID-19-symptoms-reported-through-NHS-Pathways-and-111-online/spec.html">Spec</a> -
     <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?NHS-D-Potential-COVID-19-symptoms-reported-through-NHS-Pathways-and-111-online">Status</a>
@@ -100,7 +100,7 @@
 </br>
 <p><b>Public Health England</b></p>
 <ul>
-  <li><p>Coronavirus (COVID-19) in the UK:
+  <li><p>Coronavirus (COVID-19) in the UK <b style="color:red">Priority</b>:
   <a href="specflowcharts.html?PHE-Coronavirus-COVID-19-in-the-UK/flowchart.ttl">Flowchart</a> -
   <a href="PHE-Coronavirus-COVID-19-in-the-UK/spec.html">Spec</a> -
   <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?PHE-Coronavirus-COVID-19-in-the-UK">Status</a>
