--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -60,6 +60,13 @@
     <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?NHS-D-Potential-COVID-19-symptoms-reported-through-NHS-Pathways-and-111-online">Status</a>
     </p></li>
   </ul>
+  <ul>
+    <li><p>NHS COVID-19 Daily Deaths <b style="color:red">Priority</b>:
+    <a href="specflowcharts.html?NHS-E-COVID-19-Daily-Deaths/flowchart.ttl">Flowchart</a> -
+    <a href="NHS-E-COVID-19-Daily-Deaths/spec.html">Spec</a> -
+    <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?NHS-E-COVID-19-Daily-Deaths">Status</a>
+    </p></li>
+  </ul>
   </br>
     <p><b>Department for Education</b></p>
     <ul>
