--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -79,6 +79,11 @@
     </br>
     <p><b>Welsh Government</b></p>
     <ul>
+      <li><p>WG NHS activity and capacity during the coronavirus COVID-19 pandemic <b style="color:red">Priority</b>:
+      <a href="specflowcharts.html?WG-NHS-activity-and-capacity-during-the-coronavirus-COVID-19-pandemic/flowchart.ttl">Flowchart</a> -
+      <a href="WG-NHS-activity-and-capacity-during-the-coronavirus-COVID-19-pandemic/spec.html">Spec</a> -
+      <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?WG-NHS-activity-and-capacity-during-the-coronavirus-COVID-19-pandemic">Status</a>
+      </p></li>
       <li><p>Summary data about coronavirus (COVID-19) and the response to it:
       <a href="specflowcharts.html?WG-Summary-data-about-coronavirus-COVID-19-and-the-response-to-it/flowchart.ttl">Flowchart</a> -
       <a href="WG-Summary-data-about-coronavirus-COVID-19-and-the-response-to-it/spec.html">Spec</a> -
