--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -79,31 +79,37 @@
     </br>
     <p><b>Welsh Government</b></p>
     <ul>
+      <li><p>WG Notifications of deaths of residents related to COVID-19 in adult care homes <b style="color:red">Priority</b>:
+      <a href="specflowcharts.html?WG-Notifications-of-deaths-of-residents-related-to-COVID-19-in-adult-care-homes/flowchart.ttl">Flowchart</a> -
+      <a href="WG-Notifications-of-deaths-of-residents-related-to-COVID-19-in-adult-care-homes/spec.html">Spec</a> -
+      <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?WG-Notifications-of-deaths-of-residents-related-to-COVID-19-in-adult-care-homes">Status</a>
+      </p></li>
       <li><p>WG NHS activity and capacity during the coronavirus COVID-19 pandemic <b style="color:red">Priority</b>:
       <a href="specflowcharts.html?WG-NHS-activity-and-capacity-during-the-coronavirus-COVID-19-pandemic/flowchart.ttl">Flowchart</a> -
       <a href="WG-NHS-activity-and-capacity-during-the-coronavirus-COVID-19-pandemic/spec.html">Spec</a> -
       <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?WG-NHS-activity-and-capacity-during-the-coronavirus-COVID-19-pandemic">Status</a>
-      </p></li>
-      <li><p>Summary data about coronavirus (COVID-19) and the response to it:
-      <a href="specflowcharts.html?WG-Summary-data-about-coronavirus-COVID-19-and-the-response-to-it/flowchart.ttl">Flowchart</a> -
-      <a href="WG-Summary-data-about-coronavirus-COVID-19-and-the-response-to-it/spec.html">Spec</a> -
-      <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?WG-Summary-data-about-coronavirus-COVID-19-and-the-response-to-it">Status</a>
-      </p></li>
-      <li><p>Survey of public views on the coronavirus (COVID-19):
-      <a href="specflowcharts.html?WG-Survey-of-public-views-on-the-coronavirus-COVID-19/flowchart.ttl">Flowchart</a> -
-      <a href="WG-Survey-of-public-views-on-the-coronavirus-COVID-19/spec.html">Spec</a> -
-      <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?WG-Survey-of-public-views-on-the-coronavirus-COVID-19">Status</a>
       </p></li>
       <li><p>WG Testing data for coronavirus (COVID-19) <b style="color:red">Priority</b>:
       <a href="specflowcharts.html?WG-Testing-data-for-coronavirus-COVID-19/flowchart.ttl">Flowchart</a> -
       <a href="WG-Testing-data-for-coronavirus-COVID-19/spec.html">Spec</a> -
       <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?WG-Testing-data-for-coronavirus-COVID-19">Status</a>
       </p></li>
+      <li><p>WG Summary data about coronavirus (COVID-19) and the response to it:
+      <a href="specflowcharts.html?WG-Summary-data-about-coronavirus-COVID-19-and-the-response-to-it/flowchart.ttl">Flowchart</a> -
+      <a href="WG-Summary-data-about-coronavirus-COVID-19-and-the-response-to-it/spec.html">Spec</a> -
+      <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?WG-Summary-data-about-coronavirus-COVID-19-and-the-response-to-it">Status</a>
+      </p></li>
+      <li><p>WG Survey of public views on the coronavirus (COVID-19):
+      <a href="specflowcharts.html?WG-Survey-of-public-views-on-the-coronavirus-COVID-19/flowchart.ttl">Flowchart</a> -
+      <a href="WG-Survey-of-public-views-on-the-coronavirus-COVID-19/spec.html">Spec</a> -
+      <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?WG-Survey-of-public-views-on-the-coronavirus-COVID-19">Status</a>
+      </p></li>
+
     </ul>
   </br>
   <p><b>Department for Work and Pensions</b></p>
   <ul>
-    <li><p>Universal Credit declarations (claims) and advances: management information <b style="color:red">Priority</b>:
+    <li><p>DWP Universal Credit declarations (claims) and advances: management information <b style="color:red">Priority</b>:
     <a href="specflowcharts.html?DWP-Universal-Credit-declarations-claims-and-advances-management-information/flowchart.ttl">Flowchart</a> -
     <a href="DWP-Universal-Credit-declarations-claims-and-advances-management-information/spec.html">Spec</a> -
     <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?DWP-Universal-Credit-declarations-claims-and-advances-management-information">Status</a>
@@ -112,7 +118,7 @@
 </br>
 <p><b>Public Health England</b></p>
 <ul>
-  <li><p>Coronavirus (COVID-19) in the UK <b style="color:red">Priority</b>:
+  <li><p>PHE Coronavirus (COVID-19) in the UK <b style="color:red">Priority</b>:
   <a href="specflowcharts.html?PHE-Coronavirus-COVID-19-in-the-UK/flowchart.ttl">Flowchart</a> -
   <a href="PHE-Coronavirus-COVID-19-in-the-UK/spec.html">Spec</a> -
   <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?PHE-Coronavirus-COVID-19-in-the-UK">Status</a>
@@ -121,7 +127,7 @@
 </br>
 <p><b>Marine Management Organisation</b></p>
 <ul>
-  <li><p>Ad hoc statistical release: UK Sea Fisheries Statistics:
+  <li><p>MMO Ad hoc statistical release: UK Sea Fisheries Statistics:
   <a href="specflowcharts.html?MMO-Ad-hoc-statistical-release-UK-Sea-Fisheries-Statistics/flowchart.ttl">Flowchart</a> -
   <a href="MMO-Ad-hoc-statistical-release-UK-Sea-Fisheries-Statistics/spec.html">Spec</a> -
   <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?MMO-Ad-hoc-statistical-release-UK-Sea-Fisheries-Statistics">Status</a>
