--- a/datasets/specflowcharts.html
+++ b/datasets/specflowcharts.html
@@ -71,7 +71,7 @@
     background-color: #f7c2ae;
 }
 .card-header.Rename {
-    background-color: #f7c2ae;
+    background-color: #FF0000;
 }
 
     </style></svg>
