--- a/datasets/specflowcharts.html
+++ b/datasets/specflowcharts.html
@@ -55,6 +55,7 @@
 }
 .card-header.LandingPage {
     background-color: #359eee;
+    color: white
 }
 .card-header.Datasets {
     background-color: #3673a5;
@@ -62,6 +63,7 @@
 }
 .card-header.Sheets {
     background-color: #63b132;
+    color: white
 }
 .card-header.Columns {
     background-color: #335061;
@@ -69,6 +71,7 @@
 }
 .card-header.PMD {
     background-color: #f7c2ae;
+  
 }
 .card-header.Rename {
     background-color: #FF0000;
