changing formats in specs

--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -48,7 +48,7 @@
     </nav>
     <div class="container-fluid">
       <h1>COGS Specifications</h1>
-      <h2>Covid-19 Transformations</h2>
+      <h2>Covid-19</h2>
     </br>
       <p><b><a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html">Family Transform Status</a></b></p>
   </br>
