adding another label

--- a/datasets/specflowcharts.html
+++ b/datasets/specflowcharts.html
@@ -179,7 +179,7 @@
             html += '</div><div class="card-body"><h4 class="card-title text-wrap">';
             html += '</h3><p class="card-text text-wrap">';
             if (l2 !== undefined) {
-              html += "<p><b>" + l2 + "</b></p>"
+              html += "" + l2 + "<br><br>"
             }
             if (c !== undefined) {
               html += c.value;
