Adding another label to boxes

--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -61,7 +61,7 @@
     </p></li>
   </ul>
   <ul>
-    <li><p>NHS COVID-19 Daily Deaths <b style="color:red">Priority</b>:
+    <li><p>NHS-E COVID-19 Daily Deaths <b style="color:red">Priority</b>:
     <a href="specflowcharts.html?NHS-E-COVID-19-Daily-Deaths/flowchart.ttl">Flowchart</a> -
     <a href="NHS-E-COVID-19-Daily-Deaths/spec.html">Spec</a> -
     <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?NHS-E-COVID-19-Daily-Deaths">Status</a>
