messing about with links in flowcharts

--- a/datasets/specflowcharts.html
+++ b/datasets/specflowcharts.html
@@ -184,7 +184,7 @@
             if (c !== undefined) {
               if (t.value.substring(COGS().value.length) == 'LandingPage'){
                 html += "<p><a href='spec.html'>Spec</a></p>";
-                html += "<a href='" + c.value + "'>Link</a>";
+                html += "<a href='" + c.value + "'>Source Link</a>";
               }
               else if (t.value.substring(COGS().value.length) == 'PMD'){
                 html += "<a href='" + c.value + "'>Link</a>";
