--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -163,6 +163,15 @@
   <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?MMO-Ad-hoc-statistical-release-UK-Sea-Fisheries-Statistics">Status</a>
   </p></li>
 </ul>
+</br>
+<p><b>Home Office</b></p>
+<ul>
+  <li><p>HO Statistics relating to Covid-19 and the immigration system <b style="color:red">Priority</b>:
+  <a href="specflowcharts.html?HO-Statistics-relating-to-Covid-19-and-the-immigration-system-May-2020/flowchart.ttl">Flowchart</a> -
+  <a href="HO-Statistics-relating-to-Covid-19-and-the-immigration-system-May-2020/spec.html">Spec</a> -
+  <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?HO-Statistics-relating-to-Covid-19-and-the-immigration-system-May-2020">Status</a>
+  </p></li>
+</ul>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
