adding another spec

--- a/datasets/specmenu.html
+++ b/datasets/specmenu.html
@@ -79,6 +79,13 @@
     <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?NHS-E-COVID-19-Daily-Deaths">Status</a>
     </p></li>
   </ul>
+  <ul>
+    <li><p>NHS-D Coronavirus Shielded Patient List Summary Totals England <b style="color:red">Priority</b>:
+    <a href="specflowcharts.html?NHS-D-Coronavirus-Shielded-Patient-List-Summary-Totals-England/flowchart.ttl">Flowchart</a> -
+    <a href="NHS-D-Coronavirus-Shielded-Patient-List-Summary-Totals-England/spec.html">Spec</a> -
+    <a href="https://gss-cogs.github.io/family-covid-19/datasets/index.html?NHS-D-Coronavirus-Shielded-Patient-List-Summary-Totals-England">Status</a>
+    </p></li>
+  </ul>
   </br>
     <p><b>Department for Education</b></p>
     <ul>
